--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -27,7 +31,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  font-size: 1.5em
+  font-size: 1.5em;
 }
 
 h1 {
